Changed quickstart doc.